--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-time-machine
 title: Welocme to Siva Dandamudi's homepage!
-description:Feel free to bookmark this to keep an eye on my Salesforce Projects updates.
+description: Feel free to bookmark this to keep an eye on my Salesforce Projects updates
